@@ -45,7 +45,7 @@ public:
     virtual bool supportsHover(const RenderStyle*) const;
     virtual bool supportsFocusRing(const RenderStyle* style) const;
 
-    virtual short baselinePosition(const RenderObject* o) const;
+    virtual int baselinePosition(const RenderObject* o) const;
 
     // A method asking if the control changes its tint when the window has focus or not.
     virtual bool controlSupportsTints(const RenderObject*) const;
